fixed menu images

--- a/style.css
+++ b/style.css
@@ -616,18 +616,11 @@ section {
   position: relative;
 }
 .menuitemimage {
-  display: block;
-  width: 100%;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.5em;
-  color: #333;
-  margin-bottom: 15px;
-  /* height: 25rem;
+  height: 25rem;
   object-fit: cover;
   width: 100%;
   border-radius: 0.5rem;
-  background-color: purple; */
+  background-color: purple;
 }
 .menuitem {
   color: #333;
